[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astrostash"
version = "0.0.1"
description = ""
authors = [
  {name = "Nicholas Kuechel", email = "njkuechel@protonmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astroquery >= 0.4.10",
    "pandas >= 2.3.0",
    "SQLAlchemy >= 2.0.43",
]

[project.optional-dependencies]
dev = [
    "build >= 0.10.0",
    "pytest >= 8.4.1",
    "pytest-cov >= 6.2.1",
]
